Prevent list items in the list from spilling into next column
Added
```
page-break-inside: avoid;
-webkit-column-break-inside: avoid;
break-inside: avoid;
```

--- a/media/matejkala-print.css
+++ b/media/matejkala-print.css
@@ -191,6 +191,10 @@ ol {
 }*/
 
 li {
+  page-break-inside: avoid;
+  -webkit-column-break-inside: avoid;
+  break-inside: avoid;
+
   /* second line indent */
   padding-left: 1.25em;
   text-indent: -1.25em;
